# Fun-Stuff

./: README.md  mEMeS  mEMeS.cpp
cmake_tutorial/Step1/: CMakeLists.txt  tutorial.cxx
cmake_tutorial/Step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_tutorial/Step2/: CMakeLists.txt
cmake_tutorial/Step2_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_tutorial/Step2_build/MathFunctions/: Makefile  cmake_install.cmake
cmake_tutorial/Step3/: CMakeLists.txt
cmake_tutorial/Step3/MathFunctions/: CMakeLists.txt
cmake_tutorial/Step3_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_tutorial/Step3_build/MathFunctions/: Makefile  cmake_install.cmake
cmake_tutorial/Step4/: CMakeLists.txt
cmake_tutorial/Step4/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake_tutorial/Step4_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
cmake_tutorial/Step4_build/MathFunctions/: Makefile  cmake_install.cmake
cmake_tutorial/Step5/: tutorial.cxx
cmake_tutorial/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake_tutorial/Step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake_tutorial/Step5_build/MathFunctions/: Makefile  cmake_install.cmake
express_tutorial/: info.txt
express_tutorial/locallibrary/: app.js  package-lock.json  package.json
express_tutorial/locallibrary/models/: book.js  genre.js
express_tutorial/locallibrary/routes/: users.js
meme/: README.md  mEMeS.cpp
meme2/: mEMeS2.cpp  output.js  output.wasm
meme2/meme/: package-lock.json  package.json
meme2/meme/routes/: users.js
